--- a/server/.env
+++ b/server/.env
@@ -3,5 +3,7 @@ PORT=4000
 CLIENT_ID="484902781513-cg1ncoja1o0olk9q6snotl5c1c5rbo3f.apps.googleusercontent.com"
 CLIENT_SECRET="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"
 CALLBACK_URL="http://localhost:4000/auth/google"
+GOOGLE_API_KEY="AIzaSyDqz2yiPnPp0LEjjye0s32_Gex73aXW7uY"
+
 
 
