--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ DB_CONNECT="mongodb://127.0.0.1:27017/sheet2app"
 PORT=4000
 CLIENT_ID="484902781513-cg1ncoja1o0olk9q6snotl5c1c5rbo3f.apps.googleusercontent.com"
 CLIENT_SECRET="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"
-CALLBACK_URL="http://localhost:4000/auth/google"
+CALLBACK_URL="http://localhost:4000/auth/google/callback"
 GOOGLE_API_KEY="AIzaSyDqz2yiPnPp0LEjjye0s32_Gex73aXW7uY"
 
 
