--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "googleapis": "^105.0.0",
     "mongoose": "^7.0.2",
     "mongoose-findorcreate": "^3.0.0",
+    "nodemon": "^2.0.22",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   }
