GlobalDev access control and fixed env string

--- a/server/.env
+++ b/server/.env
@@ -4,6 +4,6 @@ CLIENT_ID="484902781513-cg1ncoja1o0olk9q6snotl5c1c5rbo3f.apps.googleusercontent.
 CLIENT_SECRET="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"
 CALLBACK_URL="http://localhost:4000/auth/google/callback"
 GOOGLE_API_KEY="AIzaSyDqz2yiPnPp0LEjjye0s32_Gex73aXW7uY"
-GLOBAL_DEV_LIST_URL="https://docs.google.com/spreadsheets/d/1Op_y1wxXRebI0VKewsrQk9Orw0iOJj-DvnKqAPZnJ3w/edit?usp=sharing"
+GLOBAL_DEV_LIST_URL="https://docs.google.com/spreadsheets/d/1Op_y1wxXRebI0VKewsrQk9Orw0iOJj-DvnKqAPZnJ3w/edit#gid=0"
 
 
