--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,15 @@
             "request": "attach",
             "restart": true,
             "port": 9229
+          },
+          {
+            "name": "Launch server.js via nodemon",
+            "type": "node",
+            "request": "launch",
+            "runtimeExecutable": "nodemon",
+            "program": "${workspaceFolder}/server/index.js",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen"
           }
     ]
 }
