--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "request": "launch",
             "type": "msedge",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/client"
+            "webRoot": "${workspaceFolder}/client",
+            "port": 9222
         },
         {
             "name": "Launch Chrome",
